--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -48,10 +48,15 @@ input:focus {
 .fade-out-enter-to {
   z-index: 1;
 }
+
 .fade-in-enter-active,
 .fade-in-leave-active,
 .fade-out-enter-active,
 .fade-out-leave-active,
+.login-out-enter-active,
+.login-out-leave-active,
+.login-in-enter-active,
+.login-in-leave-active,
 .slide-in-enter-active,
 .slide-in-leave-active,
 .slide-out-enter-active,
@@ -72,7 +77,7 @@ input:focus {
   opacity: 0;
 }
 .fade-in-enter-active {
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.15);
 }
 
 .fade-in-leave-to {
@@ -102,31 +107,31 @@ input:focus {
 
 .slide-in-enter {
   opacity: 0;
-  transform: translateX(33%);
+  transform: translate3d(33%, 0, 0);
 }
 .slide-in-enter-to {
   opacity: 1;
   z-index: 2;
-  transform: translateX(0);
+  transform: translate3d(0, 0, 0);
 }
 .slide-in-leave-to {
   opacity: 0;
   z-index: 1;
-  transform: translateX(-33%);
+  transform: translate3d(-33%, 0, 0);
 }
 .slide-out-enter {
   opacity: 0;
-  transform: translateX(-33%);
+  transform: translate3d(-33%, 0, 0);
 }
 .slide-out-enter-to {
   opacity: 1;
   z-index: 2;
-  transform: translateX(0);
+  transform: translate3d(0, 0, 0);
 }
 .slide-out-leave-to {
   opacity: 0;
   z-index: 1;
-  transform: translateX(33%);
+  transform: translate3d(33%, 0, 0);
 }
 
 .c-teriral__start {
@@ -167,8 +172,45 @@ input:focus {
   }
 }
 
+.login-in-enter {
+  transform: translate3d(0, 100%, 0);
+}
+
+.login-in-enter-to {
+  z-index: 2;
+  transform: translate3d(0, 0, 0);
+}
+
+.login-in-leave {
+  z-index: 2;
+  transform: translate3d(0, 100%, 0);
+}
+
+.login-in-leave-to {
+  z-index: 2;
+  transform: translate3d(0, 0, 0);
+}
+
+
+.login-out-enter {
+  z-index: 1;
+}
+.login-out-enter-to {
+  z-index: 1;
+}
+
+.login-out-leave {
+  z-index: 2;
+  transform: translate3d(0, 0, 0);
+}
+
+.login-out-leave-to {
+  z-index: 2;
+  transform: translate3d(0, 100%, 0);
+}
+
 .g-layout {
-  background: rgba(0, 0, 0, .9) !important;
+  background: rgba(0, 0, 0, .9);
 }
 
 .app-loading-enter-active {
