--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -227,3 +227,16 @@ input:focus {
     transform: scale3d(1, 1, 1);
   }
 }
+
+.c-home__search {
+  height: 50px;
+  background: rgba(0, 0, 0, 1);
+  border-radius: 30px;
+  display: flex;
+  align-items: center;
+  padding-left: 10px;
+  .iconfont {
+    font-size: 46px;
+    color: yellow;
+  }
+}
