--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -96,11 +96,12 @@ input:focus {
 .header-back {
   position: fixed;
   left: 10px;
-  top: 14px;
+  top: 34px;
+  font-weight: bold;
   z-index: 300;
 }
 .header-back .back-icon {
-  font-size: 56px;
+  font-size: 42px;
   color: #fff;
 }
 
@@ -239,4 +240,10 @@ input:focus {
     font-size: 46px;
     color: yellow;
   }
+}
+
+.c-person__header {
+  width: 50px;
+  height: 50px;
+  border-radius: 50px;
 }
