--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -264,3 +264,15 @@ input:focus {
     color: #000;
   }
 }
+
+.c-songlist__tag {
+  margin-top: 30px;
+  display: flex;
+  .c-songlist__tag__item {
+    font-size: 24px;
+    padding-bottom: 10px;
+    color: #ccc;
+    border-bottom: 3px solid #ccc;
+    border-radius: 2px;
+  }
+}
