--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -174,6 +174,22 @@ input:focus {
   }
 }
 
+.slide-up-all-enter-active {
+  animation: slide-up-all .5s ease-in-out;
+}
+.slide-up-all-leave-active {
+  animation: slide-up-all .5s ease-in-out reverse;
+}
+
+@keyframes slide-up-all {
+  from {
+    transform: translate3d(0, 100%, 0)
+  }
+  to {
+    transform: translate3d(0, 0, 0)
+  }
+}
+
 .login-in-enter {
   transform: translate3d(0, 100%, 0);
 }
