--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -230,6 +230,7 @@ input:focus {
 .g-layout {
   box-sizing: border-box;
   overflow-y: auto;
+  touch-action: none;
   -webkit-overflow-scrolling: touch;
   background: #0D0D0D;
 }
@@ -256,6 +257,7 @@ input:focus {
   display: flex;
   align-items: center;
   padding-left: 10px;
+  touch-action: none;
   .iconfont {
     font-size: 46px;
     color: yellow;
