:zap: 1. 安卓可以滑动 2. 增加了高阶组件函数节流

--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -230,7 +230,7 @@ input:focus {
 .g-layout {
   box-sizing: border-box;
   overflow-y: auto;
-  touch-action: none;
+  // touch-action: none;
   -webkit-overflow-scrolling: touch;
   background: #0D0D0D;
 }
@@ -257,7 +257,7 @@ input:focus {
   display: flex;
   align-items: center;
   padding-left: 10px;
-  touch-action: none;
+  // touch-action: none;
   .iconfont {
     font-size: 46px;
     color: yellow;
