--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -18,8 +18,8 @@ ul, li {
   list-style: none;
 }
 
-input{
-	-webkit-user-select: auto;
+input {
+  -webkit-user-select: auto;
 }
 
 img {
@@ -30,6 +30,7 @@ img {
 input, button {
   border: none;
   outline: none;
+  background: none;
 }
 
 input:focus {
@@ -348,4 +349,10 @@ input:focus {
     opacity: 0;
     transform: translate3d(0, -30px, 0);
   }
+}
+
+.m-flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
