--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -351,6 +351,32 @@ input:focus {
   }
 }
 
+.zoom-out-enter-active {
+  animation: zomm-out .5s ease-out;
+}
+
+@keyframes zomm-out {
+  0% {
+      transform: scale3d(1, 1, 1);
+  }
+  20% {
+      transform: scale3d(1.25, 0.75, 1);
+  }
+  40% {
+      transform: scale3d(0.75, 1.25, 1);
+  }
+  60% {
+      transform: scale3d(1.1, 0.9, 1);
+  }
+  80% {
+      transform: scale3d(0.9, 1.1, 1);
+  }
+  100% {
+      transform: scale3d(1, 1, 1);
+  }
+}
+
+
 .m-flex {
   display: flex;
   justify-content: center;
